tests/rgs/valid/multiple_during_blocks.rgs
STORY  a PRIORITY 1.
STORY  b PRIORITY 2.
ACTION run.
EVENT  spotted ENVIRONMENT.

DURING ALWAYS:
    WHEN spotted ENVIRONMENT:
        DO run.
DURING a:
    WHEN spotted ENVIRONMENT:
        DO run.
DURING b:
    WHEN spotted ENVIRONMENT:
        DO run.
