tests/rgs/syntax_errors/named_story_missing_period.rgs
STORY quest PRIORITY 1
    ACTION run.
    EVENT spotted ENVIRONMENT.
    AGENT Hero:
        DURING ALWAYS:
            WHEN spotted ENVIRONMENT:
                DO run.
